2015-10-27 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added track jets in Event class. Added nTrk cut for track jets when
	applying track jet b-tagging. Added tau32 information in large jets.
	Added missing cross section information in XSection file. Added helper
	scripts to run code in lxbatch. Added option in read to remove high
	mtt events in the ttbar 410000 sample to avoid overlap with the
	mttsliced samples.
	* Added configurable setup for plotting scripts in plotting/.
	* TopNtupleAnalysis-00-02-05

2015-10-26 Marino Romano <sromanos@cern.ch>
	* Fixing typo bug in doQCDstudies.py
	* Improving getMMWeights code
	* TopNtupleAnalysis-00-02-04

2015-10-19 Marino Romano <sromanos@cern.ch>
	* Adding MMUtils class, for the implementation of the weights from the MM
	* TopNtupleAnalysis-00-02-02

2015-10-10 Marino Romano <sromanos@cern.ch>
	* Updated plotting code after tests.
	* Added latest SF systematics as in 2.3.30 setup.
	* TopNtupleAnalysis-00-02-01

2015-10-10 Marino Romano <sromanos@cern.ch>
        * Updates in the fake rate estimation

2015-10-02 Marino Romano <sromanos@cern.ch>
        * First steps on the fake rate estimation

2015-10-01 Marino Romano <sromanos@cern.ch>
	* Typo in MiniTtre

2015-09-28 Samuel Calvet <scalvet@in2p3.fr>
	* Add code to remove duplicate events
	
2015-09-22 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added code to make MiniTree generic to avoid updating it all the
	time.
	* Added track jet b-tagging using --btags X when X is negative.
	* Added b-tagging SFs.
	* TopNtupleAnalysis-00-01-01

2015-09-18 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Start of ChangeLog (with some delay).
	* Added b-tagging and lepton SF systematic uncertainties.
	* TopNtupleAnalysis-00-01-00