@@ -102,7 +102,9 @@ void MiniTree::read(int event, Event &e) {
     (vc("el_isTight")) ? e.electron()[k].setTightPP(vc("el_isTight")->at(k)) : e.electron()[k].setTightPP(true);
     e.electron()[k].caloMom() = e.electron()[k].mom();
     e.electron()[k].trkMom() = e.electron()[k].mom();
-    e.electron()[k].z0() = 0;
+    e.electron()[k].z0() = vf("el_z0")->at(k);
+    e.electron()[k].d0() = vf("el_d0")->at(k);
+    e.electron()[k].sd0() = vf("el_d0sig")->at(k);    
     e.electron()[k].author() = 1;
   }
   for (int k = 0; k < vf("mu_pt")->size(); ++k) {
@@ -111,9 +113,9 @@ void MiniTree::read(int event, Event &e) {
     e.muon()[k].setMI(0);
     e.muon()[k].setTight(true);
     (vc("mu_isTight")) ? e.muon()[k].setTight(vc("mu_isTight")->at(k)) : e.muon()[k].setTight(true);
-    e.muon()[k].z0() = 0;
-    e.muon()[k].d0() = 0;
-    e.muon()[k].sd0() = 0;
+    e.muon()[k].z0() = vf("mu_z0")->at(k);
+    e.muon()[k].d0() = vf("mu_d0")->at(k);
+    e.muon()[k].sd0() = vf("mu_d0sig")->at(k);
     e.muon()[k].author() = 0;
     e.muon()[k].passTrkCuts() = true;
   }
