@@ -1,3 +1,6 @@
+2015-10-29 Marino Romano <sromanos@cern.ch>
+	* Updating the code to read z0, d0 and d0sig for electron and muon
+
 2015-10-27 Danilo Ferreira de Lima <dferreir@cern.ch>
 	* Added track jets in Event class. Added nTrk cut for track jets when
 	applying track jet b-tagging. Added tau32 information in large jets.
